var searchData=
[
  ['i32le_0',['I32LE',['../d0/d25/namespacelogika_1_1meters_1_1TagId4M.html#ad5d432462a0eeb320d2d0b444052c7eaa8b00b17c3e38ca5e5ba75116c233783d',1,'logika::meters::TagId4M']]],
  ['i32r32_1',['I32R32',['../d6/d1f/namespacelogika_1_1meters_1_1BinaryType4L.html#ae46513347c4ea0ea5563977484872d90a841bab2c474dfeb62157b3120d7331b5',1,'logika::meters::BinaryType4L']]],
  ['ia5string_2',['Ia5String',['../d0/d25/namespacelogika_1_1meters_1_1TagId4M.html#ad5d432462a0eeb320d2d0b444052c7eaa404f197be50f0370b39ef37c38cbae5b',1,'logika::meters::TagId4M']]],
  ['iconnection_3',['IConnection',['../df/ddb/classlogika_1_1connections_1_1IConnection.html',1,'logika::connections::IConnection'],['../df/da9/namespacelogika_1_1connections.html#a447dbdd1dcf03327577c102320cc5cd8',1,'logika::connections::IConnection']]],
  ['iconnection_2eh_4',['iconnection.h',['../d8/de5/iconnection_8h.html',1,'']]],
  ['id_5',['id',['../d3/d26/structlogika_1_1meters_1_1VitalInfo.html#a429fcd9ca31808703ab0cb9d1a89bdba',1,'logika::meters::VitalInfo::id'],['../d4/d9a/structlogika_1_1protocols_1_1M4_1_1Packet.html#a02efb71797d2cd6852dfb94f12fc1c86',1,'logika::protocols::M4::Packet::id']]],
  ['ident_6',['Ident',['../dc/df7/namespacelogika_1_1meters.html#a199715557a67e6906bb2ee196129357da35cef9b551d46ecfd244f4694de9e228',1,'logika::meters']]],
  ['ident_5f_7',['ident_',['../d3/d77/classlogika_1_1meters_1_1Meter.html#a43c2d4755133ac61fd5200d06ebbeba7',1,'logika::meters::Meter']]],
  ['identmatch_8',['IdentMatch',['../d9/d2a/classlogika_1_1meters_1_1IMeter.html#a967f2d57bac9f5db0d6dcaf89e8836df',1,'logika::meters::IMeter::IdentMatch()'],['../de/d88/classlogika_1_1meters_1_1Spt941__10.html#acb33aaebcaee6f1bcab4edebea995010',1,'logika::meters::Spt941_10::IdentMatch()'],['../dd/d9e/classlogika_1_1meters_1_1Spt943.html#a6465e192da21f486d9aaaf7fbedb91ae',1,'logika::meters::Spt943::IdentMatch()'],['../d1/d0c/classlogika_1_1meters_1_1Spt941__20.html#a112eb941ac78e3b5f9ea8864be395ef1',1,'logika::meters::Spt941_20::IdentMatch()'],['../da/d78/classlogika_1_1meters_1_1Spt943rev3.html#a47a2ec43b9b31ce5c9f55ce2858b8ee7',1,'logika::meters::Spt943rev3::IdentMatch()'],['../d6/df4/classlogika_1_1meters_1_1Logika4.html#a54ef49839cb2b86e755289da15f74337',1,'logika::meters::Logika4::IdentMatch()'],['../d3/d77/classlogika_1_1meters_1_1Meter.html#afe9362f713dac9d7cf06424599ddb8a1',1,'logika::meters::Meter::IdentMatch()']]],
  ['iloader_9',['ILoader',['../d4/dce/classlogika_1_1resources_1_1ILoader.html',1,'logika::resources']]],
  ['imeter_10',['IMeter',['../d9/d2a/classlogika_1_1meters_1_1IMeter.html',1,'logika::meters']]],
  ['imeter_2eh_11',['imeter.h',['../d8/dd2/imeter_8h.html',1,'']]],
  ['importanttag_12',['ImportantTag',['../dc/df7/namespacelogika_1_1meters.html#a199715557a67e6906bb2ee196129357d',1,'logika::meters']]],
  ['index_13',['index',['../d5/d2d/structlogika_1_1meters_1_1DataTagDef6Settings.html#a8c46bc299c18c35ae2d19f381b178a89',1,'logika::meters::DataTagDef6Settings::index'],['../d3/d00/structlogika_1_1protocols_1_1M4_1_1TvReadState4L.html#a4de393483e0c30b43f0c83d358400582',1,'logika::protocols::M4::TvReadState4L::index'],['../d9/d2a/structlogika_1_1protocols_1_1M4_1_1FrbIndex.html#a249b00711ce3e1e648c6c0d7066f8b0f',1,'logika::protocols::M4::FrbIndex::index']]],
  ['index_5f_14',['index_',['../da/dcc/classlogika_1_1meters_1_1DataTagDef.html#a4902e89517d6e48a892436275f97f05b',1,'logika::meters::DataTagDef']]],
  ['indexaddr_15',['indexAddr',['../d3/db0/structlogika_1_1meters_1_1ArchiveDef4LSettings.html#a2aa3ad36f1c3aa1458c4fb8e57b8babd',1,'logika::meters::ArchiveDef4LSettings']]],
  ['indexaddr2_16',['indexAddr2',['../d3/db0/structlogika_1_1meters_1_1ArchiveDef4LSettings.html#a680e30c9ea9b10cba889ad5a71f0014b',1,'logika::meters::ArchiveDef4LSettings']]],
  ['indexaddr2_5f_17',['indexAddr2_',['../d5/dce/classlogika_1_1meters_1_1ArchiveDef4L.html#ad7b8f69fdb34e42ce8f7f980fe775c0f',1,'logika::meters::ArchiveDef4L']]],
  ['indexaddr_5f_18',['indexAddr_',['../d5/dce/classlogika_1_1meters_1_1ArchiveDef4L.html#a49b08c07650ac3a6a1d9e455c965814f',1,'logika::meters::ArchiveDef4L']]],
  ['indices_19',['indices',['../d3/d00/structlogika_1_1protocols_1_1M4_1_1TvReadState4L.html#a3b4522e38127f91a92e771d560c4e6f7',1,'logika::protocols::M4::TvReadState4L']]],
  ['info_20',['Info',['../d3/d8d/namespacelogika_1_1meters_1_1TagKind.html#accf7d7f47cf257977aaae4ba4ce4147ca63a55be2651d10c9322377b47a10ca1a',1,'logika::meters::TagKind']]],
  ['init_21',['Init',['../d9/d2a/classlogika_1_1meters_1_1IMeter.html#a138e495855f65ad4fef8f2a1fb37b74b',1,'logika::meters::IMeter::Init()'],['../d7/d1b/classlogika_1_1meters_1_1Logika4L.html#a1614e1ca01416c665ff82c1a676df41a',1,'logika::meters::Logika4L::Init()'],['../d6/d6a/classlogika_1_1meters_1_1Spt942.html#aba52e2590d45f9024e73eb338aa701b1',1,'logika::meters::Spt942::Init()'],['../dd/d0e/classlogika_1_1meters_1_1Logika4M.html#aaaeeb361078b5230d61c9b6445c82898',1,'logika::meters::Logika4M::Init()'],['../d3/d77/classlogika_1_1meters_1_1Meter.html#a36909a4c14a14d4399e208de073241f6',1,'logika::meters::Meter::Init()']]],
  ['inram_22',['inRam',['../d9/d4c/structlogika_1_1meters_1_1TagDef4LSettings.html#a318d4505eb335d1ba0044fbaab62f40a',1,'logika::meters::TagDef4LSettings']]],
  ['inram_5f_23',['inRam_',['../db/d67/classlogika_1_1meters_1_1TagDef4L.html#a9bdab67045c8f9dfe469a4e42ccfc903',1,'logika::meters::TagDef4L']]],
  ['insertafter_24',['insertAfter',['../d0/d69/structlogika_1_1meters_1_1CalcFieldDefSettings.html#ac587f3b1962adfa2dabcd21f45ff1b18',1,'logika::meters::CalcFieldDefSettings']]],
  ['insertafter_5f_25',['insertAfter_',['../d8/d13/classlogika_1_1meters_1_1CalcFieldDef.html#ac825cb624aefa3eed00f8725dcaa113f',1,'logika::meters::CalcFieldDef']]],
  ['insertcolumn_26',['InsertColumn',['../d3/dca/classlogika_1_1meters_1_1DataTable.html#adc2d72bf1fb00482e950fc1f5105c0f5',1,'logika::meters::DataTable::InsertColumn(FieldType field, size_t index)'],['../d3/dca/classlogika_1_1meters_1_1DataTable.html#a620d577540cb326f123b27d75521ee36',1,'logika::meters::DataTable::InsertColumn(FieldType field, size_t index, const T &amp;value)']]],
  ['insertrecord_27',['InsertRecord',['../d3/dca/classlogika_1_1meters_1_1DataTable.html#ad5feb5f9931e2cc397908db66e5b08ba',1,'logika::meters::DataTable']]],
  ['instance_28',['Instance',['../d9/d0f/classlogika_1_1log_1_1Logger.html#a7404c0e0aa1c6e0d28f25b412c872b4a',1,'logika::log::Logger::Instance()'],['../d5/d47/classlogika_1_1storage_1_1StorageKeeper.html#a37299afb978d120d7e9386e7b5e96d64',1,'logika::storage::StorageKeeper::Instance()']]],
  ['int32_29',['Int32',['../dc/df7/namespacelogika_1_1meters.html#a3c9c221a1135a439bbbaf4a504c70fefac06129f6e6e15c09328365e553f1dc31',1,'logika::meters']]],
  ['int32array_30',['Int32Array',['../dc/df7/namespacelogika_1_1meters.html#a3c9c221a1135a439bbbaf4a504c70fefabfe39fc9f161e24f5cb31f40b98af4d3',1,'logika::meters']]],
  ['int64_31',['Int64',['../dc/df7/namespacelogika_1_1meters.html#a3c9c221a1135a439bbbaf4a504c70fefafbde23b11d7e59af7828e81144c8b487',1,'logika::meters']]],
  ['internaltype_5f_32',['internalType_',['../d3/d70/classlogika_1_1meters_1_1ArchiveFieldDef4L.html#a65b59123871e547ee1d01b654d36f5fb',1,'logika::meters::ArchiveFieldDef4L::internalType_'],['../db/d67/classlogika_1_1meters_1_1TagDef4L.html#af3165848ba383a6df777cb7ba48ea571',1,'logika::meters::TagDef4L::internalType_']]],
  ['internaltypefromstring_33',['InternalTypeFromString',['../dd/dfb/namespacelogika__migration_1_1EnumsStringToPb.html#ac3ca1722b95ca8234fc44a63bf94e91c',1,'logika_migration::EnumsStringToPb']]],
  ['interval_5farchive_2ecpp_34',['interval_archive.cpp',['../d1/dd2/interval__archive_8cpp.html',1,'']]],
  ['interval_5farchive_2eh_35',['interval_archive.h',['../d7/d6f/interval__archive_8h.html',1,'']]],
  ['intervalarchive_36',['IntervalArchive',['../d2/dd3/classlogika_1_1meters_1_1IntervalArchive.html',1,'logika::meters::IntervalArchive'],['../d2/dd3/classlogika_1_1meters_1_1IntervalArchive.html#a76e846d62df96ebee4906d011dc35af3',1,'logika::meters::IntervalArchive::IntervalArchive(std::shared_ptr&lt; Meter &gt; meter, std::shared_ptr&lt; ArchiveType &gt; archiveType)'],['../d2/dd3/classlogika_1_1meters_1_1IntervalArchive.html#a86fde95519d0e59e69790a702696a53e',1,'logika::meters::IntervalArchive::IntervalArchive(std::shared_ptr&lt; Meter &gt; meter, std::shared_ptr&lt; ArchiveType &gt; archiveType, std::shared_ptr&lt; DataTable &gt; tableTemplate)'],['../dc/df7/namespacelogika_1_1meters.html#a1f4c42347a29e1d61dc48f3a576f8a34',1,'logika::meters::IntervalArchive']]],
  ['intfconfig_37',['intfConfig',['../d3/d26/structlogika_1_1meters_1_1VitalInfo.html#a0222d286e7de883235031370ee954848',1,'logika::meters::VitalInfo']]],
  ['inttype_38',['intType',['../d9/d4c/structlogika_1_1meters_1_1TagDef4LSettings.html#abd86f863692c16038d11bd58c6943bac',1,'logika::meters::TagDef4LSettings']]],
  ['invalidargerror_39',['InvalidArgError',['../df/dea/namespacelogika_1_1connections_1_1Rc.html#ad077f3dcd802ffc6a350f1a97877a4c6ae9a410cdeffb191c13288484dfc21061',1,'logika::connections::Rc::InvalidArgError'],['../d0/d25/namespacelogika_1_1protocols_1_1Rc.html#a481bf96742509dbd4ff8fe8f255b2e1fab52eb51e5fb3eb79e380837514c34815',1,'logika::protocols::Rc::InvalidArgError']]],
  ['invalidatedata_40',['InvalidateData',['../d7/d11/classlogika_1_1protocols_1_1M4_1_1FlashArchive4.html#a93419218216ee1e2fcc587cc23f3b4f6',1,'logika::protocols::M4::FlashArchive4::InvalidateData()'],['../d7/dd9/classlogika_1_1protocols_1_1M4_1_1SyncFlashArchive4.html#a939600591a20d774de1191164be24602',1,'logika::protocols::M4::SyncFlashArchive4::InvalidateData()']]],
  ['invalidateelement_41',['InvalidateElement',['../d4/d7c/classlogika_1_1protocols_1_1M4_1_1FlashArray.html#a386b59f05346825cb1d14833fdca0e9b',1,'logika::protocols::M4::FlashArray']]],
  ['iprotocol_42',['IProtocol',['../da/dd0/classlogika_1_1protocols_1_1IProtocol.html',1,'logika::protocols']]],
  ['iprotocol_2eh_43',['iprotocol.h',['../d7/de4/iprotocol_8h.html',1,'']]],
  ['isbasicparam_44',['isBasicParam',['../d1/dd1/structlogika_1_1meters_1_1DataTagDefSettings.html#a4c854aa66c60857896f4becc1e8e9bab',1,'logika::meters::DataTagDefSettings']]],
  ['isbasicparam_45',['IsBasicParam',['../da/dcc/classlogika_1_1meters_1_1DataTagDef.html#aa806a117f149475d45ee1245d6a9304a',1,'logika::meters::DataTagDef']]],
  ['isbasicparam_5f_46',['isBasicParam_',['../da/dcc/classlogika_1_1meters_1_1DataTagDef.html#ae64e896ea883622b1bfbe25ebebb977c',1,'logika::meters::DataTagDef']]],
  ['isconnected_47',['IsConnected',['../db/da7/classlogika_1_1connections_1_1Connection.html#a657465c6032182c01aa0d9de0bd3f05f',1,'logika::connections::Connection::IsConnected()'],['../df/ddb/classlogika_1_1connections_1_1IConnection.html#a16bb40cd9c0eab8af1755b243bd6764f',1,'logika::connections::IConnection::IsConnected()']]],
  ['iserializable_48',['ISerializable',['../dd/dbc/classlogika_1_1ISerializable.html',1,'logika']]],
  ['iserializable_2eh_49',['iserializable.h',['../da/d08/iserializable_8h.html',1,'']]],
  ['isinram_50',['IsInRam',['../db/d67/classlogika_1_1meters_1_1TagDef4L.html#a6e2017d8f8199b26ccf8dd2542bd6d72',1,'logika::meters::TagDef4L']]],
  ['isintervalarchive_51',['IsIntervalArchive',['../d2/d02/classlogika_1_1meters_1_1ArchiveType.html#aadc8b6fde49bdd9efce6851af0c0f3d7',1,'logika::meters::ArchiveType']]],
  ['isservicearchive_52',['IsServiceArchive',['../d2/d02/classlogika_1_1meters_1_1ArchiveType.html#a59c8415333137959e79d02a1342c1a63',1,'logika::meters::ArchiveType']]],
  ['issettingsvalid_53',['IsSettingsValid',['../de/d68/classlogika_1_1connections_1_1SerialPortConnection.html#ac25907e525e69ea860d74a5aa901a1dd',1,'logika::connections::SerialPortConnection']]],
  ['istiny_54',['IsTiny',['../d5/dce/classlogika_1_1meters_1_1ArchiveDef4L.html#aa39bc8bf716200ac1510278d4b678e10',1,'logika::meters::ArchiveDef4L']]],
  ['istiny42_55',['isTiny42',['../d3/db0/structlogika_1_1meters_1_1ArchiveDef4LSettings.html#a068622243e84a204f6bb92b4bfabdfdb',1,'logika::meters::ArchiveDef4LSettings']]],
  ['istiny42_5f_56',['isTiny42_',['../d5/dce/classlogika_1_1meters_1_1ArchiveDef4L.html#a526781accf87fb8828f5199a2432ace6',1,'logika::meters::ArchiveDef4L']]],
  ['istorage_57',['IStorage',['../d2/d94/classlogika_1_1storage_1_1IStorage.html',1,'logika::storage']]],
  ['isvalidbaudrate_58',['IsValidBaudRate',['../df/da9/namespacelogika_1_1connections.html#a90556d4e553585d97f1d07400f4e16f2',1,'logika::connections']]],
  ['isvalidconnectiontype_59',['IsValidConnectionType',['../df/da9/namespacelogika_1_1connections.html#a8ffcb39bba11c383b5e571e09d0b144c',1,'logika::connections']]],
  ['isvaliddatabits_60',['IsValidDataBits',['../df/da9/namespacelogika_1_1connections.html#a68137c73b2ce9a57150c1d57b0d2f602',1,'logika::connections']]],
  ['isvalidparity_61',['IsValidParity',['../df/da9/namespacelogika_1_1connections.html#a449236d7a6dfb49eca066d38eed711bc',1,'logika::connections']]],
  ['isvalidpurgeflags_62',['IsValidPurgeFlags',['../df/da9/namespacelogika_1_1connections.html#adaceef5420c8e70afd4afe9003caa4cd',1,'logika::connections']]],
  ['isvalidstopbits_63',['IsValidStopBits',['../df/da9/namespacelogika_1_1connections.html#afd29dd035af1af6e1265c247da5e7452',1,'logika::connections']]],
  ['isvariableinterval_64',['IsVariableInterval',['../d2/d02/classlogika_1_1meters_1_1ArchiveType.html#a6c2c1810887bc642564192274136fb1d',1,'logika::meters::ArchiveType']]],
  ['item_5fdef_5fbase_2ecpp_65',['item_def_base.cpp',['../d0/d8f/item__def__base_8cpp.html',1,'']]],
  ['item_5fdef_5fbase_2eh_66',['item_def_base.h',['../d7/dbc/item__def__base_8h.html',1,'']]],
  ['itemdefbase_67',['ItemDefBase',['../da/dc9/classlogika_1_1meters_1_1ItemDefBase.html',1,'logika::meters::ItemDefBase'],['../da/dc9/classlogika_1_1meters_1_1ItemDefBase.html#ac3d2682e433b72e26f1624da17b63b95',1,'logika::meters::ItemDefBase::ItemDefBase()']]],
  ['izmrecord_68',['IzmRecord',['../d6/d1f/namespacelogika_1_1meters_1_1BinaryType4L.html#ae46513347c4ea0ea5563977484872d90a1fc77359f08e186549ebbf09449af9f7',1,'logika::meters::BinaryType4L']]]
];
